@@ -45,7 +45,7 @@ public final class StringUtils {
     }
 
     public static boolean isBlank(String str) {
-        return str == null || str.trim().isEmpty();
+        return str == null || str.isBlank();
     }
 
     public static boolean isNotBlank(String str) {
